重构完成一部分，可以下载文件了
改成多任务下载，暂时不支持续传（软件重开），多文件下载

--- a/qml.qrc
+++ b/qml.qrc
@@ -11,5 +11,12 @@
         <file>qml/MainWindow.qml</file>
         <file>qml/SettingPage.qml</file>
         <file>qml/TextLoader.qml</file>
+        <file>123.jpg</file>
+        <file>app.ico</file>
+        <file>qml/ExitDialog.qml</file>
+        <file>qml/NewUrlPage.qml</file>
+        <file>qml/HttpSetting.qml</file>
+        <file>qml/MyScrollView.qml</file>
+        <file>qml/DownloadDelegate.qml</file>
     </qresource>
 </RCC>
