新增功能和修复几个bug
新增功能：
1.添加完成页面和删除页面
2.添加代理设置
3.为每个任务添加右键菜单
4.每个右键菜单功能都实现了
修复BUG：
1.修复多文件下载的路劲问题
2.进度条的显示问题
3.加载跳转链接时暂停，会导致暂停失败的问题
已知BUG：
1.多文件下载的文件大小和进度显示问题
2.多文件的永久删除问题
3.加载跳转链接时会出现未开始任务的问题
4.文件下载失败会显示下载成功

--- a/qml.qrc
+++ b/qml.qrc
@@ -16,5 +16,7 @@
         <file>qml/NewUrlPage.qml</file>
         <file>qml/HttpSetting.qml</file>
         <file>qml/MyScrollView.qml</file>
+        <file>qml/FinishPage.qml</file>
+        <file>qml/TrashPage.qml</file>
     </qresource>
 </RCC>
