添加迅雷链接识别
1.有一处需要修改的地方，就是url类型的识别

--- a/qml.qrc
+++ b/qml.qrc
@@ -18,5 +18,6 @@
         <file>qml/MyScrollView.qml</file>
         <file>qml/FinishPage.qml</file>
         <file>qml/TrashPage.qml</file>
+        <file>qml/BTSetting.qml</file>
     </qresource>
 </RCC>
